# chatbotbackend

./: .env.example  .gitignore  .pre-commit-config.yaml  ISSUES.md  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
scripts/: parse_tg_messages.py
src/: app.py  schemes.py  settings.py
src/clients/: llm.py  qdrant.py
src/pipeline/: abc_base_node.py  config.py  context.py  orchestrator.py
src/pipeline/nodes/: chit_chat.py  dialog_type_decision.py  final.py  generate_answer.py  get_context.py
